--- a/MiTramite_Front/WAMiTramiteGestion/Components/Layout/MainLayout.razor
+++ b/MiTramite_Front/WAMiTramiteGestion/Components/Layout/MainLayout.razor
@@ -1,24 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
-<!-- Navbar superior sencillo con logo y botones Registro / Iniciar sesión -->
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
-        <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="/">
-                <img src="https://www.gestora.bo/img/logos/logoslogan.png" alt="Gestora La Paz" width="200" height="46"
-                    class="my-2" />
-            </a>
-
-            <div class="d-flex ms-auto">
-                <a class="btn btn-outline-primary me-2" href="/register">Registro</a>
-                <a class="btn btn-primary" href="/login">Iniciar sesión</a>
-            </div>
-        </div>
-    </nav>
-</header>
 
 <main class="py-4">
-    <div class="container">
+    <div class="container-fluid">
         <article class="content">
             @Body
         </article>
