--- a/MiTramite_Front/WAMiTramiteGestion/Components/Pages/Login.razor
+++ b/MiTramite_Front/WAMiTramiteGestion/Components/Pages/Login.razor
@@ -2,7 +2,7 @@
 
 <style>
     body {
-        background: linear-gradient(135deg, #007bff, #6610f2);
+        background: linear-gradient(135deg, #007b3f, #007bff, #6610f2);
         height: 100vh;
         display: flex;
         justify-content: center;
@@ -49,33 +49,31 @@
         transition: all 0.3s ease;
     }
 
-        .btn-login:hover {
-            background: linear-gradient(90deg, #6610f2, #007bff);
-            transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(0, 123, 255, 0.3);
-        }
+    .btn-login:hover {
+        background: linear-gradient(90deg, #6610f2, #007bff);
+        transform: translateY(-2px);
+        box-shadow: 0 5px 15px rgba(0, 123, 255, 0.3);
+    }
 
     .text-muted a {
         color: #6610f2;
         text-decoration: none;
     }
 
-        .text-muted a:hover {
-            text-decoration: underline;
-        }
+    .text-muted a:hover {
+        text-decoration: underline;
+    }
 
     @@keyframes fadeIn {
-        from
+        from {
+            opacity: 0;
+            transform: translateY(30px);
+        }
 
-    {
-        opacity: 0;
-        transform: translateY(30px);
-    }
-
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
 
     }
 </style>
